# bili-live

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: cli.rs  live.rs  login.rs  main.rs  tui.rs
