[package]
license = "MIT"
description = "A command line tool for starting and stopping live streams on bilibili.com, capable of providing the RTMP address and stream key for streaming software such as OBS."
homepage = "https://github.com/HellOwhatAs/bili-live"
repository = "https://github.com/HellOwhatAs/bili-live"
readme = "README.md"
name = "bili-live"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.120"
serde = { version="1.0.204", features = ["derive"] }
qrcode = "0.14.1"
urlencoding = "2.1.3"
bytes = "1.0"
clap = { version="4.5.9", features=["derive", "cargo"] }
chrono = "0.4.38"
viuer = "0.6"
image = "0.24.7"
ratatui = "0.27.0"
color-eyre = "0.6.3"