[package]
license = "MIT"
description = "A command line tool for starting and stopping live streams on bilibili.com, capable of providing the RTMP address and stream key for streaming software such as OBS."
homepage = "https://github.com/HellOwhatAs/bili-live"
repository = "https://github.com/HellOwhatAs/bili-live"
readme = "README.md"
name = "bili-live"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "cookies",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
qrcode = "0.14.1"
urlencoding = "2.1.3"
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
chrono = "0.4.38"
viuer = "0.6"
image = "0.24.7"
ratatui = "0.27.0"
color-eyre = "0.6.3"
dirs = "5.0.1"
rsa = "0.6.0"
sha2 = "0.10.0"
base64 = "0.13.0"
rand = "0.8.5"
flate2 = "1.0"
scraper = "0.19.1"
cookie = "0.18.1"
